<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/time_picker_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/button"
        android:animateLayoutChanges="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/stopwatch_display"
            android:layout_width="265dp"
            android:layout_height="54dp"
            android:layout_marginTop="200dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/stopwatch_laps_listview"
            android:layout_width="265dp"
            android:layout_height="0dp"
            android:layout_marginTop="35dp"
            app:layout_constraintBottom_toTopOf="@+id/stopwatch_button_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stopwatch_display" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/stopwatch_button_container"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="#1A000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="PxUsage" />

            <Button
                android:id="@+id/stopwatch_tab_reset_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="205dp"
                android:layout_height="0dp"
                android:text="@string/stopwatch_tab_reset"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/stopwatch_tab_stop_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="205dp"
                android:layout_height="0dp"
                android:text="@string/stopwatch_tab_pause"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/stopwatch_tab_resume_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="205dp"
                android:layout_height="0dp"
                android:text="@string/stopwatch_tab_resume"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/stopwatch_tab_lap_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="205dp"
                android:layout_height="0dp"
                android:text="@string/stopwatch_tab_lap"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/stopwatch_tab_start_button"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/stopwatch_tab_start_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/timer_tab_start"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>